# kong-cma-migration

./: .gitignore  README.md  convertMule2Kong.py  prepareApisFolders.py  pushToGit.py  pyproject.toml  rf-p2p-x-api.json  samples_services.csv  x-proxy-api-wind-commercial-shipping-dd-calculatedcharges.json
KIC_Minikube_Setup/: Dockerfile  README.md
KIC_Minikube_Setup/config/: hello-ingress.yaml  helloapp-deployment.yaml
examples/: experience-wave4-backoffice-api.json  proxy-price-calculation-api.json  rf-p2p-x-api.json  wimb2-api.json  x-proxy-api-wind-commercial-shipping-dd-calculatedcharges.json
konnect_template/: Jenkinsfile  deck-config.yaml  deployit-manifest.xml
konnect_template/ingressRules/: kong-proxy-ingress-api-canary.yaml
lib/: convertMule2Kong.py
migrate_mule_api_2_kong.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: installEnv.sh
